--- a/ORMTodos/app.config
+++ b/ORMTodos/app.config
@@ -9,7 +9,7 @@
   </startup>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Todos;Integrated Security=True;Pooling=False"/>
+    <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=SittingOnTheFence;Integrated Security=True;Pooling=False"/>
   </connectionStrings>
 
   <lightSpeedContexts>
