--- a/ORMTodos/ORMTodos.csproj
+++ b/ORMTodos/ORMTodos.csproj
@@ -62,6 +62,8 @@
     <Compile Include="HelpView.cs" />
     <Compile Include="IControler.cs" />
     <Compile Include="LightSpeedRepository.cs" />
+    <Compile Include="AddToListController.cs" />
+    <Compile Include="AddToListModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Router.cs" />
