--- a/ORMTodos/ORMTodos.csproj
+++ b/ORMTodos/ORMTodos.csproj
@@ -70,9 +70,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TODOs.lsmodel</DependentUpon>
     </Compile>
+    <Compile Include="UserTotals.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="TODOs.lsmodel">
       <Generator>LightSpeedModelGenerator</Generator>
       <LastGenOutput>TODOs.cs</LastGenOutput>
